cleanup: get rid of deprecated/internal methods
GitOrigin-RevId: 2611d369c534a982dd747cbab870ec8fc940eefa